# EduConnect

./: .env  .gitignore  README.md  UI.html  UI.py  chat.html  chosen_teacher.json  docker-compose.yml  dockerfile  dockerfile.backend  dockerfile.frontend  educonnectGPT.html  home.html  hướng dẫn chạy local.txt  init.sql  initial_choice.html  insert_fake_data.sql  insert_test_data.sql  login.html  main.py  match.html  notification.html  pricing.html  profile.html  pyproject.toml  quiz.html  ranking.html  review.html  schedule.html  setting.html  suitable_teacher.json  support.html  test.html  test_database.py  welcome.html
EduconnectGPT/: .env  docker-compose.yml  dockerfile  init.sql  main.py  nginx.conf  requirements.txt  ui.py
EduconnectGPT/.streamlit/: config.toml
EduconnectGPT/api/: config.py
api/: config.py
api/chat_function/: create_conversation.py
api/database/: __init__.py  database.py
api/routes/: __init__.py  routes.py
api/services/: __init__.py  chatbot.py  recommender_system.py
frontend/: account_registration.html  cancel.html  chat.html  deposit.html  educonnectGPT.html  home.html  login.html  match.html  nginx-initial.conf  nginx.conf  notification.html  pricing.html  profile.html  quiz.html  ranking.html  review.html  schedule.html  setting.html  success.html  support.html  welcome.html
frontend/css/: account_registration.css  chat.css  deposit.css  educonnectGPT.css  home.css  login.css  match.css  notification.css  pricing.css  profile.css  quiz.css  ranking.css  result_payment.css  review.css  schedule.css  setting.css  summarization.css  support.css  welcome.css
frontend/html/: chat.html  login.html  profile.html  setting.html  support.html
frontend/js/: account_registration.js  auth.js  chat.js  deposit.js  (+11 more)
(+117 files in other folders)
