[tool.poetry]
name = "EduConnect"
version = "0.0.1"
description = "EduConnect project base"
authors = ["Trịnh Minh Châu <121995378+ChauTr1102@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.44.1"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
